crates/carta/tests/snapshots/golden_writer__beamer__common__definition-list-loose.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{description}
\item[Term]
Definition one

Definition two
\end{description}
\end{frame}
