crates/carta/tests/snapshots/golden_writer__beamer__common__definition-list-tight.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{description}
\tightlist
\item[Term]
Definition one

Definition two
\end{description}
\end{frame}
