crates/carta/tests/snapshots/golden_writer__beamer__common__definition-term-colon.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\begin{description}
\tightlist
\item[term: with colon]
definition
\end{description}
\end{frame}
