crates/carta/tests/snapshots/golden_writer__beamer__common__div-admonition.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
be careful here
\end{frame}
