crates/carta/tests/snapshots/golden_writer__beamer__common__div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\protect\phantomsection\label{d}
body paragraph
\end{frame}
