crates/carta/tests/snapshots/golden_writer__beamer__common__emphasis-family.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\emph{emph} \textbf{strong} \st{struck} super\textsuperscript{2}
sub\textsubscript{3}
\end{frame}
