crates/carta/tests/snapshots/golden_writer__beamer__common__emphasis-line-start.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\textbf{bold} opens the line

*literal star
\end{frame}
