crates/carta/tests/snapshots/golden_writer__beamer__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
\emph{see \href{http://example.com}{text} here}
\end{frame}
