crates/carta/tests/snapshots/golden_writer__beamer__common__escape-flanking.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
a * b ` c \textbar{} d and trailing\_ref\_
\end{frame}
