crates/carta/tests/snapshots/golden_writer__beamer__common__escape-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}
a \& b \% c \# d \_ e \$ f \{ g \} h \^{} i \textasciitilde{} j
\end{frame}
