crates/carta/tests/snapshots/golden_writer__beamer__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
\begin{frame}[fragile]
ref\footnote<\value{beamerpauses}->[frame]{\begin{Verbatim}
code only
\end{Verbatim}
}
\end{frame}
